# gmtk-engine

./: .clang-format  .gitignore  CMakeLists.txt  a.txt  gmtkenginearchitecture.drawio  perf.data.old
drlibs/: dr_wav.h
glad/glad/: glad.c  glad.h
src/: main.cpp
src/audio/: al_buffer.cpp  al_buffer.hpp  al_device.cpp  al_device.hpp  al_listener.cpp  al_listener.hpp  al_sound.cpp  al_sound.hpp  miniaudio_impl.cpp
src/engine/: engine.cpp  engine.hpp
src/gl/texture/: gl_texture.cpp  gl_texture.hpp
src/gl/util/: gl_util.cpp  gl_util.hpp
src/gl/util/buffer/: gl_buffer.cpp  gl_buffer.hpp  gl_buffer.tpp
src/gl/util/shader/: gl_shader.cpp  gl_shader.hpp
src/gl/util/vao/: gl_vao.cpp  gl_vao.hpp
src/input/: input.cpp  input.hpp
src/io/logging/: logger.hpp
src/manager/: manager.cpp  manager.hpp
src/manager/object/: object.cpp  object.hpp
src/manager/object/components/: TestComponent.hpp  camera.cpp  camera.hpp  component.hpp  texture.cpp  texture.hpp  transform.cpp
src/memory/: memorypool.cpp  memorypool.hpp  mempool.cpp  mempool.hpp
src/renderer/: renderer.cpp  renderer.hpp
src/renderer/core/: core.cpp  core.hpp
src/renderer/core/device/: device.cpp  device.hpp
src/renderer/core/instance/: instance.cpp  instance.hpp
src/renderer/core/swapchain/: swapchain.cpp  swapchain.hpp
src/renderer/texture/: gl_texture.cpp  gl_texture.hpp
src/renderer/util/buffer/: gl_buffer.cpp  gl_buffer.hpp
src/renderer/util/shader/: gl_shader.cpp  gl_shader.hpp
src/renderer/util/vao/: gl_vao.cpp  gl_vao.hpp
src/scene/: scene.cpp  scene.hpp  scene.tpp  state_info.hpp
src/scene/dt/: delta_time.cpp  delta_time.hpp
src/scene/object/: object.cpp  object.hpp  object.tpp  object2D.hpp  object3D.hpp
src/scene/object/2d/: object2D.cpp  object2D.hpp  object2d.cpp  object2d.hpp
src/scene/object/3d/: object3D.hpp  object3d.hpp
src/scene/object/camera/: camera.cpp  camera.hpp
src/scene/object/components/: TestComponent.cpp  TestComponent.hpp  component.cpp  component.hpp  texture.cpp  texture.hpp  transform.hpp
src/scene/object/components/physics/: physicsconstants.hpp
src/scene/object/components/ref/: component_ref.hpp
src/scene/object/components/script/: script.cpp  script.hpp
src/scene/object/components/shader/: shader.hpp
src/scene/object/components/sound/: sound.cpp  (+1 more)
src/scene/object/custom_render_object/: custom_render_object.hpp
src/scene/object/render_object/: RenderObject.hpp
src/scene/physics_manager/: physics_constants.hpp
src/scene/physics_manager/2d/: physics_manager2d.cpp  physics_manager2d.hpp
src/scene/ref/: resource_ref.hpp
src/scene/renderer/: renderer.cpp  renderer.hpp  renderer.tpp
src/scene/renderer/2d/: renderer2d.cpp  renderer2d.hpp
src/scene/renderer/dbg/: debug_renderer.cpp  debug_renderer.hpp
src/scripting/: EngineAPI.h  GameObjectWrapper.cpp  IGameScript.hpp  SceneWrapper.cpp  plugin_loader.hpp
src/util/: utilities.h  utilities.hpp
src/window/: window.cpp  window.hpp
stb/stb_image/: textureDefinition.hpp
test_shaders/: debug_rect.frag  debug_rect.vert  sprite_2d.frag  sprite_2d.vert  text.frag  text.vert  tri.frag
(+24 files in other folders)
